--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "u_roles_perm",
   "version": "1.0.0",
+  "description": "A professional Node.js project with role-based access control",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "format": "prettier --write .",
+    "lint": "eslint . --fix",
+    "precommit": "lint-staged"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "RBAC",
+    "Node.js",
+    "Express",
+    "Authentication",
+    "Authorization"
+  ],
+  "author": "Alok Singh",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1"
+  },
+  "devDependencies": {
+    "lint-staged": "^15.4.3",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.2"
   }
 }
