--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
+    "randomstring": "^1.3.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
